--- a/arrow-libs/core/arrow-continuations/build.gradle
+++ b/arrow-libs/core/arrow-continuations/build.gradle
@@ -12,6 +12,11 @@ apply plugin: 'kotlinx-atomicfu'
 
 kotlin {
     sourceSets {
+        commonMain {
+            dependencies {
+                compileOnly "org.jetbrains.kotlin:kotlin-stdlib-common:$KOTLIN_VERSION"
+            }
+        }
         jvmMain {
             dependencies {
                 compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$KOTLIN_VERSION"
