--- a/arrow-libs/core/arrow-core/build.gradle
+++ b/arrow-libs/core/arrow-core/build.gradle
@@ -13,12 +13,17 @@ apply from: "$ANIMALSNIFFER"
 
 kotlin {
     sourceSets {
+        commonMain {
+            dependencies {
+                compileOnly "org.jetbrains.kotlin:kotlin-stdlib-common:$KOTLIN_VERSION"
+                api project(":arrow-continuations")
+                api project(":arrow-annotations")
+            }
+        }
         jvmMain {
             dependencies {
                 compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$KOTLIN_VERSION"
                 compileOnly "org.codehaus.mojo:animal-sniffer-annotations:1.19"
-                api project(":arrow-continuations")
-                api project(":arrow-annotations")
             }
         }
 
